Jann 30/objects/Deal_M_A_Advisor__c.object
<CustomObject>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Address__c</fullName>
        <label>Contact Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <label>Contact Email</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Fax__c</fullName>
        <label>Contact Fax</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Mobile__c</fullName>
        <label>Contact Mobile</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <label>Contact Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Phone__c</fullName>
        <label>Contact Phone</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Title__c</fullName>
        <label>Contact Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deal</label>
        <referenceTo>Deal__c</referenceTo>
        <relationshipName>M_A_Advisors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Key_Markets__c</fullName>
        <label>Key Markets</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Investment Banks</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Contact_Name__c</columns>
        <columns>Contact_Title__c</columns>
        <columns>Contact_Phone__c</columns>
        <columns>Contact_Address__c</columns>
        <columns>Contact_Email__c</columns>
        <columns>Contact_Mobile__c</columns>
        <columns>Key_Markets__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Comments__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Investment Bank Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Investment Banks</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>